# Let-s-meet-up

./: .env.example  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  DB_DESIGNER_GUIDE.md  DEPLOYMENT.md  Dockerfile  ER_DIAGRAM.md  ER_DIAGRAM_SUMMARY.md  ER_DIAGRAM_VISUAL.md  EXAMPLES.md  Makefile  QUICKSTART_ER_DIAGRAM.md  README.md  TEST_DATA.md  conftest.py  create_test_data.py  database_diagram.html  database_diagram.xml  database_schema.sql  docker-compose.yml  entrypoint.sh  main.py  manage.py  pyproject.toml  pytest.ini  reqs.txt  test_invitations_data.py
apps/abstracts/: apps.py  models.py
apps/categories/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/comments/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/events/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/friendships/: __init__.py  admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/geography/: __init__.py  admin.py  apps.py  models.py  serializers.py
apps/invitations/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/media/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/participants/: __init__.py  admin.py  apps.py  models.py
apps/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
project/: create_test_data.py
project/abstracts/: apps.py  models.py
project/categories/: __init__.py  apps.py  models.py
project/comments/: __init__.py  (+2 more)
requirements/: prod.txt
settings/: asgi.py  base.py  conf.py  urls.py  wsgi.py
(+107 files in other folders)
