[project]
name = "let-s-meet-up"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.10.0",
    "django==5.2.7",
    "django-cors-headers==4.6.0",
    "django-environ==0.11.2",
    "django-import-export==4.3.14",
    "django-unfold==0.28.0",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.3.1",
    "drf-spectacular==0.28.0",
    "faker==38.2.0",
    "psycopg2-binary==2.9.10",
    "pyjwt==2.9.0",
    "pytest==8.3.4",
    "pytest-django==4.9.0",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
]
